force-app/main/default/objects/Activity/fields/ALK_Canal__c.field-meta.xml
<CustomField>
    <fullName>ALK_Canal__c</fullName>
    <label>Canal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Correo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>