force-app/main/default/objects/Activity/fields/ALK_Description__c.field-meta.xml
<CustomField>
    <fullName>ALK_Description__c</fullName>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>