force-app/main/default/objects/Activity/fields/ALK_Status_Codigo__c.field-meta.xml
<CustomField>
    <fullName>ALK_Status_Codigo__c</fullName>
    <label>Status Código</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Fallido</fullName>
            </value>
            <value>
                <fullName>Se Cayo La Llamada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>